Fix header and add fix styes

--- a/#src/index.html
+++ b/#src/index.html
@@ -39,13 +39,16 @@
 
   <div class="__container">
 
-      <main class="main">
+    <main class="main">
+      <div class="main_bg">
+        @@include('./html/_header_grid.html')
 
+      </div>
 
-      </main>
+    </main>
 
-    </div>
   </div>
+
 
 
 
