--- a/#src/index.html
+++ b/#src/index.html
@@ -42,6 +42,27 @@
     <main class="main">
       <div class="main_bg">
         @@include('./html/_header_grid.html')
+        <div class="main2">
+          <div class="main__info">
+            <p class="main__sub-title">
+              exsplore the world
+            </p>
+            <h1 class="main__title">
+              Explore The Natural
+              Beauty Of Halmahera
+              With Us
+            </h1>
+            <p class="main__sup-title">explore the beauty of god's earth in a beautiful forest and have fun</p>
+            <div class="main__button">
+            <a class="" href="#">Exsplore Now</a>
+
+            </div>
+          </div>
+
+          <div class="main-photo">
+            <img src="img/index/main_man.png" alt="main_man">
+          </div>
+        </div>
 
       </div>
 
