Done main 80% And slider

--- a/#src/index.html
+++ b/#src/index.html
@@ -40,9 +40,13 @@
   <div class="__container">
 
     <main class="main">
+
       <div class="main_bg">
+
         @@include('./html/_header_grid.html')
+
         <div class="main2">
+
           <div class="main__info">
             <p class="main__sub-title">
               exsplore the world
@@ -54,20 +58,28 @@
             </h1>
             <p class="main__sup-title">explore the beauty of god's earth in a beautiful forest and have fun</p>
             <div class="main__button">
-            <a class="" href="#">Exsplore Now</a>
-
+              <a class="" href="#">Exsplore Now</a>
             </div>
-          </div>
-
-          <div class="main-photo">
-            <img src="img/index/main_man.png" alt="main_man">
           </div>
         </div>
 
+        <div class="main-photo"></div>
       </div>
-
     </main>
 
+    <section class="slider__container">
+      <div class="info">
+        <h1 class="info__title">
+          Choice Of <span class="info__title-span">Destinations</span>
+        </h1>
+        <p class="info__sup-title">explore the beauty of god's earth in a beautiful forest and have fun</p>
+        <div class="info__button">
+          <a class="" href="#">Exsplore Now</a>
+        </div>
+      </div>
+
+      <div class="slider__info"></div>
+    </section>
   </div>
 
 
