Add slider and slider section

--- a/#src/html/_slider_home.html
+++ b/#src/html/_slider_home.html
@@ -5,101 +5,33 @@
         <!-- Slides -->
 
         <div data-hash="slide-1" class="swiper-slide">
-            <section class="slider-home">
-                <div class="slider-home__img">
-                    <img width="100%" height="auto" src="img/index/main_slider/main_home_1.png" alt="main_home_1">
-                </div>
-                <div class="slider-home__text">
-                    <h1 class="slider-home__title">Find peace in the Forest</h1>
-                    <p class="slider-home__subtitle">
-                        Come and stay at a hotel hut near <br> the Mariager fjord in Denmark
-                    </p>
-                </div>
-                <div class="slider-home__button">
-                    <div class="little-book__button">
-                        <a class="button__block button__block-home" href="#">
-                            <div class="block__book">
-                                <h5 class="book__title">Book A Hut</h5>
-                            </div>
-                        </a>
-                        <div class="button__info-price">
-                            <div class="info-price__text">
-                                <p class="text__price-book_1">from</p>
-                                <p class="text__price-book_2">&euro;3.200</p>
-                                <p class="text__price-book_3">per night</p>
-                            </div>
-                        </div>
-                    </div>
+            <section style="width: 335px" class="slider-home">
+                <div class="slider-home__img" style="width: 335px">
+                    <img width="100%" height="auto" src="img/index/main_slider/slider_destinations_1.png" alt="slider_destinations_1">
                 </div>
             </section>
         </div>
 
-        <div data-hash="slide-2" class="swiper-slide">
-            <section class="slider-home">
-                <div class="slider-home__img">
-                    <img width="100%" height="auto" src="img/index/main_slider/main_home_2.png" alt="main_home_2">
-                </div>
-                <div class="slider-home__text">
-                    <h1 class="slider-home__title">Find peace in Nature </h1>
-                    <p class="slider-home__subtitle">
-                        Come and stay at a hotel hut in <br> Norway
-                    </p>
-                </div>
-                <div class="slider-home__button">
-                    <div class="little-book__button">
-                        <a class="button__block button__block-home" href="#">
-                            <div class="block__book">
-                                <h5 class="book__title">Book A Hut</h5>
-                            </div>
-                        </a>
-                        <div class="button__info-price">
-                            <div class="info-price__text">
-                                <p class="text__price-book_1">from</p>
-                                <p class="text__price-book_2">&euro;5.200</p>
-                                <p class="text__price-book_3">per night</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div data-hash="slide-2" class="swiper-slide">
+            <section style="width: 335px" class="slider-home">
+                <div class="slider-home__img" style="width: 335px">
+                <img width="100%" height="auto" src="img/index/main_slider/slider_destinations_2.png" alt="slider_destinations_2">
+              </div>
             </section>
-        </div>
+          </div>
 
-        <div data-hash="slide-3" class="swiper-slide">
-            <section class="slider-home">
-                <div class="slider-home__img">
-                    <img width="100%" height="auto" src="img/index/main_slider/main_home_3.png" alt="main_home_3">
+            <div data-hash="slide-3" class="swiper-slide">
+            <section style="width: 335px" class="slider-home">
+                <div class="slider-home__img" style="width: 335px">
+                  <img width="100%" height="auto" src="img/index/main_slider/slider_destinations_3.png" alt="slider_destinations_3">
                 </div>
-                <div class="slider-home__text">
-                    <h1 class="slider-home__title">Find peace in the Stars </h1>
-                    <p class="slider-home__subtitle">
-                        Come and stay at a hotel hut in <br> Iceland
-                    </p>
-                </div>
-                <div class="slider-home__button">
-                    <div class="little-book__button">
-                        <a class="button__block button__block-home" href="#">
-                            <div class="block__book">
-                                <h5 class="book__title">Book A Hut</h5>
-                            </div>
-                        </a>
-                        <div class="button__info-price">
-                            <div class="info-price__text">
-                                <p class="text__price-book_1">from</p>
-                                <p class="text__price-book_2">&euro;6.200</p>
-                                <p class="text__price-book_3">per night</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
+              </section>
+            </div>
 
     </div>
 
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
 
-    <div class="swiper-pagination"></div>
 
 </div>
