--- a/#src/index.html
+++ b/#src/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
 
-      <div class="slider__info"></div>
+      <div class="slider__info">
+        @@include('./html/_slider_home.html')
+
+      </div>
     </section>
   </div>
 
