Add marked for exploring

--- a/#src/index.html
+++ b/#src/index.html
@@ -116,7 +116,8 @@
             <p class="reviews-tourists__geo">Japung, Indonesia</p>
           </div>
         </div>
-        <p class="reviews-tourists__subtitle">Very satisfying service makes it <br> comfortable, a beautiful place in the
+        <p class="reviews-tourists__subtitle">Very satisfying service makes it <br> comfortable, a beautiful place in
+          the
           world. </p>
         <div class="reviews-tourists__rating-area rating-area">
           <input type="radio" id="star-5" name="rating" value="5">
@@ -133,7 +134,16 @@
       </div>
     </section>
 
-    <section></section>.
+    <section class="exploring exploring__container">
+      <div class=exploring__block>
+        <h2 class="exploring__title">Prepare Yourself And
+          Start Exploring With Us.</h2>
+        <p class="exploring__subtitle">There's the best discount for you today.</p>
+        <div class="exploring__button">
+          <a class="exploring__link" href="">Get Started</a>
+        </div>
+      </div>
+    </section>
   </div>
 
 
