--- a/#src/index.html
+++ b/#src/index.html
@@ -140,13 +140,21 @@
           Start Exploring With Us.</h2>
         <p class="exploring__subtitle">There's the best discount for you today.</p>
         <div class="exploring__button">
-          <a class="exploring__link" href="">Get Started</a>
+          <a class="exploring__link" href="#" target="__blank">Get Started</a>
         </div>
       </div>
     </section>
+
+    <section class="subscripe subscripe__container">
+      <h2 class="subscripe__title">
+        Subscribe <br>
+        To Our Newsletter</h2>
+      <form action="" method="POST" class="subscripe__block">
+        <input type="text" class="subscripe__input" placeholder="Yourmail@mail.com">
+        <button type="submit" class="subscripe__button">Subscribe</button>
+      </form>
+    </section>
   </div>
-
-
 
 
   <!-- ======== Spoiler ======== -->
