--- a/#src/index.html
+++ b/#src/index.html
@@ -156,6 +156,8 @@
     </section>
   </div>
 
+   @@include('./html/_footer.html')
+
 
   <!-- ======== Spoiler ======== -->
   <!-- <script src="js/plugins_spollers_acordeon.min.js"></script> -->
