--- a/#src/html/_footer.html
+++ b/#src/html/_footer.html
@@ -1,73 +1,53 @@
 <footer class="footer">
-    <div class="footer__container">
-        <div class="footer__newsletter">
-            <form class="newsletter__form" action="/newsletter-send" method="post">
-                <label class="newsletter__title" for="mail">Newsletter</label>
+  <div class="footer__container">
+    <div class="footer__copy-header">
 
-                <input class="newsletter__input" type="text" id="mail" name="mail__add" placeholder="Email Adress">
-                <button class="newsletter__button" type="submit">
-                    <object
-                            type="image/svg+xml"
-                            data="img/index/footer/footer_line.svg">
-                        <img src="img/index/footer/footer_line.png" alt="footer_line">
-                    </object>
-                </button>
-            </form>
-            <p class="newsletter-sub-text">Sign up to our newsletter for special things and receive 10% off your next
-                order.</p>
-        </div>
+      <div class="footer__block-logo">
+        <a data-aos="zoom-in" tabindex="2" class="footer__logo" href="index.html">
+          GoTrip
+        </a>
+      </div>
 
-        <div class="footer__license">
-            <ul class="footer__license-text">
-                <li class="footer__license-item-text"><a href="#">TERMS AND CONDITIONS</a></li>
-                <li class="footer__license-item-text"><a href="#">CENCELLATION POLICY</a></li>
-                <li class="footer__license-item-text"><a href="#">PRIVACY POLICY</a></li>
+      <div class="footer__block-nav">
+        <div class="menu__body">
+
+          <nav class="menu__nav">
+            <ul class="menu__list">
+              <li tabindex="1" class="menu__list-link menu__list-link-1">
+                <a class="menu__link" href="#">Home</a>
+              </li>
+
+              <li tabindex="2" class="menu__list-link menu__list-link-2">
+                <a class="menu__link" href="#">Services</a>
+              </li>
+
+              <li tabindex="3" class="menu__list-link menu__list-link-3">
+                <a class="menu__link" href="#"> Pricing</a>
+              </li>
+
+              <li tabindex="4" class="menu__list-link menu__list-link-4">
+                <a class="menu__link" href="#">Contack</a>
+              </li>
             </ul>
+          </nav>
+        </div>
+      </div>
 
-            <ul class="footer__license-icon">
-                <li class="footer__license-item">
-                    <a href="https://www.paypal.com/ru/home" target="_blank">
-                        <object
-                                type="image/svg+xml"
-                                data="img/index/footer/item_comp_paypal.svg">
-                            <img src="img/index/footer/item_comp_paypal.png" alt="item_comp_paypal">
-                        </object>
-                    </a>
-                </li>
-                <li class="footer__license-item">
-                    <a href="https://www.mastercard.ua/uk-ua.html" target="_blank">
-                        <object
-                                type="image/svg+xml"
-                                data="img/index/footer/item_comp_master_card.svg">
-                            <img src="img/index/footer/item_comp_master_card.png" alt="item_comp_master_card">
-                        </object>
-                    </a>
-                </li>
-                <li class="footer__license-item">
-                    <a href="https://www.visa.com.ua/uk_UA" target="_blank">
-                        <object
-                                type="image/svg+xml"
-                                data="img/index/footer/item_comp_visa.svg">
-                            <img src="img/index/footer/item_comp_visa.png" alt="item_comp_visa">
-                        </object>
-                    </a>
-                </li>
-                <li class="footer__license-item">
-                    <a href="https://privatbank.ua/ru/sistemy-denegnih-perevodov" target="_blank">
-                        <object
-                                type="image/svg+xml"
-                                data="img/index/footer/item_comp_bank_transfer.svg">
-                            <img src="img/index/footer/item_comp_bank_transfer.png" alt="item_comp_bank_transfer">
-                        </object>
-                    </a>
-                </li>
-            </ul>
-
+      <div class="log-in-out footer__log-in-out">
+        <div tabindex="9" class="menu__list-link-login">
+          <a class="menu__link menu__login" href="#">Sign up</a>
         </div>
 
-        <div class="footer__security-police">
-            <p> &copy; 2021 The Glass Huts</p>
+        <div tabindex="10" class="menu__list-link-sign-up">
+          <a class="menu__link menu__sign-up" href="#">Login</a>
         </div>
+      </div>
 
     </div>
+
+    <div class="footer__security-police">
+      <p> &copy; 2021 Go Trip</p>
+    </div>
+
+  </div>
 </footer>
