--- a/#src/index.html
+++ b/#src/index.html
@@ -63,7 +63,7 @@
           </div>
         </div>
 
-        <div class="main-photo"></div>
+        <div id="main-photo" class="main-photo"></div>
       </div>
     </main>
 
@@ -156,7 +156,7 @@
     </section>
   </div>
 
-   @@include('./html/_footer.html')
+  @@include('./html/_footer.html')
 
 
   <!-- ======== Spoiler ======== -->
@@ -177,10 +177,10 @@
   <!-- <script src="plugins/swiper/js/slider_init_version_2.min.js"></script> -->
 
   <!-- ======== AOS Script ======== -->
-  <!-- <script src="plugins/aos/dist/aos.min.js"></script> -->
+  <script src="plugins/aos/dist/aos.min.js"></script>
 
   <!-- ======== AOS Script Init ======== -->
-  <!-- <script src="plugins/aos/js/aos_init.min.js"></script> -->
+  <script src="plugins/aos/js/aos_init.min.js"></script>
 
   <!-- ======== Anime Script  ======== -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script> -->
@@ -190,6 +190,8 @@
 
   <!-- ======== Bootstrap script ======== -->
   <!-- <script src="plugins/bootstrap_5.1.0/dist/js/bootstrap.min.js"></script> -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
   <!-- ======== Main Script ======== -->
   <script src="js/main_script.min.js"></script>
