Fix parallax for main-scene and rebuild gulp(delete trash photo)

--- a/#src/index.html
+++ b/#src/index.html
@@ -45,7 +45,7 @@
 
       <div class="main__bg">
 
-        <div class="main-scene" id="man-scene">
+        <div class="main-scene">
           <div class="main-scene__info">
             <p class="main-scene__sub-title">
               exsplore the world
@@ -61,9 +61,12 @@
             </div>
           </div>
 
-          <div data-depth="0.2" class="main-scene__photo">
-            <img class="main-scene__img" src="../img/index/main_man-bg.png" alt="main_man-bg">
+          <div id="man-scene" class="main-scene__photo">
+            <div data-depth="0.4" class="main-scene__human">
+              <img class="main-scene__img" src="../img/index/main_man-bg.png" alt="main_man-bg">
+            </div>
           </div>
+
         </div>
 
         <div class="eclipse-scene eclipse-scene__main-1">
