Corrected position ellipse and add new ellipse 2x

--- a/#src/index.html
+++ b/#src/index.html
@@ -90,20 +90,20 @@
         </div>
 
         <div class="eclipse-scene eclipse-scene__main-2">
-          <div class="eclipse-scene__big" data-aos="zoom-in" data-aos-delay="500">
-            <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="eclipse-scene__big-exploring" data-aos="zoom-in" data-aos-delay="500">
+            <svg width="41" height="41" viewbox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle opacity="0.5" cx="15.5" cy="15.5" r="15.5" fill="#4E887A" />
             </svg>
 
           </div>
-          <div class="eclipse-scene__middle" data-aos="zoom-in" data-aos-delay="300">
-            <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="eclipse-scene__middle-exploring" data-aos="zoom-in" data-aos-delay="300">
+            <svg width="27" height="27" viewbox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle opacity="0.5" cx="10.5" cy="10.5" r="10.5" fill="#4E887A" />
             </svg>
 
           </div>
-          <div class="eclipse-scene__little" data-aos="zoom-in" data-aos-delay="100">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="eclipse-scene__little-exploring" data-aos="zoom-in" data-aos-delay="100">
+            <svg width="22" height="22" viewbox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle opacity="0.5" cx="8.5" cy="8.5" r="8.5" fill="#4E887A" />
             </svg>
           </div>
@@ -229,24 +229,45 @@
         </div>
 
         <div class="eclipse-scene eclipse-scene__main-3">
-          <div class="eclipse-scene__big" data-aos="zoom-in" data-aos-delay="500">
-            <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle opacity="0.5" cx="15.5" cy="15.5" r="15.5" fill="#4E887A" />
+          <div class="eclipse-scene__big-exploring" data-aos="zoom-in" data-aos-delay="500">
+            <svg width="41" height="41" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="15.5" cy="15.5" r="15.5" fill="#FFBDA7" />
             </svg>
 
           </div>
-          <div class="eclipse-scene__middle" data-aos="zoom-in" data-aos-delay="300">
-            <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle opacity="0.5" cx="10.5" cy="10.5" r="10.5" fill="#4E887A" />
+          <div class="eclipse-scene__middle-exploring" data-aos="zoom-in" data-aos-delay="300">
+            <svg width="27" height="27" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="10.5" cy="10.5" r="10.5" fill="#FFBDA7" />
             </svg>
 
           </div>
-          <div class="eclipse-scene__little" data-aos="zoom-in" data-aos-delay="100">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle opacity="0.5" cx="8.5" cy="8.5" r="8.5" fill="#4E887A" />
+          <div class="eclipse-scene__little-exploring" data-aos="zoom-in" data-aos-delay="100">
+            <svg width="22" height="22" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="8.5" cy="8.5" r="8.5" fill="#FFBDA7" />
             </svg>
           </div>
         </div>
+
+        <div class="eclipse-scene eclipse-scene__main-4">
+          <div class="eclipse-scene__big-exploring" data-aos="zoom-in" data-aos-delay="500">
+            <svg width="41" height="41" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="15.5" cy="15.5" r="15.5" fill="#FFBDA7" />
+            </svg>
+
+          </div>
+          <div class="eclipse-scene__middle-exploring" data-aos="zoom-in" data-aos-delay="300">
+            <svg width="27" height="27" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="10.5" cy="10.5" r="10.5" fill="#FFBDA7" />
+            </svg>
+
+          </div>
+          <div class="eclipse-scene__little-exploring" data-aos="zoom-in" data-aos-delay="100">
+            <svg width="22" height="22" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle opacity="0.5" cx="8.5" cy="8.5" r="8.5" fill="#FFBDA7" />
+            </svg>
+          </div>
+        </div>
+
       </div>
     </section>
 
