--- a/#src/index.html
+++ b/#src/index.html
@@ -148,6 +148,11 @@
 
           </div>
         </div>
+
+        <div class="bg-triangle-left"></div>
+
+        <div class="bg-triangle-right"></div>
+
       </div>
 
     </main>
