Add mixin file and adaptive mixin for fonts. Fix url main-scene__human

--- a/#src/index.html
+++ b/#src/index.html
@@ -63,7 +63,7 @@
 
           <div id="man-scene" class="main-scene__photo">
             <div data-depth="0.4" class="main-scene__human">
-              <img class="main-scene__img" src="../img/index/main_man-bg.png" alt="main_man-bg">
+              <img class="main-scene__img" src="img/index/main_man-bg.png" alt="main_man-bg">
             </div>
           </div>
 
