Add preload for main_man-bg.png

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,6 +9,10 @@
   <meta name="author" content="Seniv Pavlo, https://github.com/PavloSeniv">
   <meta name="copyright" content="Seniv Pavlo">
   <title>Go Trip</title>
+
+  <link rel="preload" as="image" href="img/index/main_man-bg.png"
+    imagesrcset="img/index/main_man-bg.webp" imagesizes="50vw">
+
   <!-- ======== Іконка ======== -->
   <!-- <link rel="shortcut icon" href="img/favicon.ico"> -->
   <link rel="icon" href="img/favicon.svg">
@@ -63,7 +67,7 @@
 
           <div id="man-scene" class="main-scene__photo">
             <div data-depth="0.4" class="main-scene__human">
-              <img class="main-scene__img" src="img/index/main_man-bg.png" alt="main_man-bg">
+              <img width="100%" height="100%" class="main-scene__img" src="img/index/main_man-bg.png" alt="main_man-bg">
             </div>
           </div>
 
