--- a/#src/index.html
+++ b/#src/index.html
@@ -10,6 +10,7 @@
   <meta name="copyright" content="Seniv Pavlo">
   <title>Go Trip</title>
 
+  <!-- ======== Попереднє завантаження фото ======== -->
   <link rel="preload" as="image" href="img/index/main_man-bg.png"
     imagesrcset="img/index/main_man-bg.webp" imagesizes="50vw">
 
@@ -40,7 +41,6 @@
 
 <body>
 
-
   <div class="__container">
 
     @@include('./html/_header_grid.html')
@@ -67,7 +67,7 @@
 
           <div id="man-scene" class="main-scene__photo">
             <div data-depth="0.4" class="main-scene__human">
-              <img width="100%" height="100%" class="main-scene__img" src="img/index/main_man-bg.png" alt="main_man-bg">
+              <img width="100%" height="100%" class="main-scene__img" src="img/index/main/main_man-bg.png" alt="main_man-bg">
             </div>
           </div>
 
@@ -180,7 +180,7 @@
 
     <section class="reviews-tourists reviews-tourists__container">
       <div class="reviews-tourists__photo">
-        <img src="img/index/customers_photo.png" alt="customers_photo" class="reviews-tourists__img">
+        <img src="img/index/customers/customers_photo.png" alt="customers_photo" class="reviews-tourists__img">
       </div>
       <div class="reviews-tourists__info">
         <h2 class="reviews-tourists__title">What do customers say <br> about us?</h2>
@@ -289,10 +289,10 @@
         <button type="submit" class="subscripe__button">Subscribe</button>
       </form>
     </section>
+
   </div>
 
   @@include('./html/_footer.html')
-
 
   <!-- ======== Spoiler ======== -->
   <!-- <script src="js/plugins_spollers_acordeon.min.js"></script> -->
@@ -330,6 +330,7 @@
 
   <!-- ======== Main Script ======== -->
   <script src="js/main_script.min.js"></script>
+  
 </body>
 
 </html>
